Bug 153689 - systemsettings advanced icon configuration: size comboboxes show wrong values
Summary: systemsettings advanced icon configuration: size comboboxes show wrong values
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_icons (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Marie Loise Nolden
URL:
Keywords:
: 164474 166845 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-12-08 18:15 UTC by FiNeX
Modified: 2009-07-08 02:55 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (13.17 KB, image/png)
2008-11-14 08:53 UTC, m.wege
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2007-12-08 18:15:55 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

1) The size combobox has this value list when the "desktop/file manager" is selected:

16
22
32
48
64
32
33
34
35
...
256

2) When "small icons" is selected, the size combo box has only one value: "16" but it is enabled, instead, when "panel" is selected, the combo box is disabled.

3) When "all icons" is selected, the size combo box is empty.
Comment 1 FiNeX 2008-06-20 12:31:42 UTC
*** Bug 164474 has been marked as a duplicate of this bug. ***
Comment 2 FiNeX 2008-08-13 22:00:56 UTC
Moreover setting a value for all the icons doesn't work.
Comment 3 FiNeX 2008-08-13 22:01:06 UTC
*** Bug 169067 has been marked as a duplicate of this bug. ***
Comment 4 FiNeX 2008-11-14 00:34:01 UTC
*** Bug 166845 has been marked as a duplicate of this bug. ***
Comment 5 m.wege 2008-11-14 08:53:35 UTC
Created attachment 28567 [details]
screenshot

I was asked to provide a screenshot. Since this has been around also in KDE3.5 I provide a KDE3.5 screenshot, but it is the same problem in KDE4.1.3.
Comment 6 FiNeX 2008-11-14 10:15:43 UTC
Thanks! I confirm it is still valid on KDE 4.
Comment 7 Dario Andres 2008-12-30 00:16:52 UTC
I've discovered some things.

1) is caused by KIconTheme loading "possible sizes" for SVG icons (kdelibs/kdeui/icons/kicontheme.cpp:225) (?)

2) Something is really broken here :)

3) Also, selecting "All Icons" queryies for an unexistant icon group, and thus the icon size is Null (no available sizes in the combo). And the folder icons below can't be loaded (strange icon size var)

Seems like this module wasn't correctly updated to KDE4 icons config.

Also "Panel" may be deprecated as Plasma doesn't use these (I think)
Comment 8 FiNeX 2008-12-30 11:05:25 UTC
Well, neither plasma and dolphin seems using this settigs, maybe the folder view use the "desktop" size, I'd have to test it... Are toolbars using the size settigs?
Comment 9 Christoph Feck 2009-06-24 14:21:00 UTC
SVN commit 986243 by cfeck:

Add "Dialog" icon group to icons KCM

There was an oversight when this group had been added; the
code was incorrectly assuming that LastGroup == Panel + 1

Fix will be in KDE 4.4
BUG: 153689



 M  +11 -1     icons.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=986243
Comment 10 m.wege 2009-06-24 14:46:48 UTC
Since this is a bugfix. Isn't it possible to put this in 4.3.1?
Comment 11 Christoph Feck 2009-07-08 02:55:50 UTC
Mark, the commit adds a string and a feature, so it will not be in 4.3. The fix is actually a side effect of the commit.