Add "Dialog" icon group to icons KCM

There was an oversight when this group had been added; the
code was incorrectly assuming that LastGroup == Panel + 1

Fix will be in KDE 4.4
BUG: 153689


svn path=/trunk/KDE/kdebase/runtime/; revision=986243